create project list and detail view and templates

--- a/portfolio_app/templates/portfolio_app/portfolio_detail.html
+++ b/portfolio_app/templates/portfolio_app/portfolio_detail.html
@@ -5,8 +5,8 @@
 <h1>Portfolio Title: {{ portfolio.title }}</h1>
 
 
-<p><strong>Portfolio Active:</strong> {{ porfolio.is_active }}</p>
-<p><strong>About:</strong> {{ portfolio.about }}</p>
+<p><strong>Portfolio Active: </strong> {{ portfolio.is_active }}</p>
+<p><strong>About: </strong> {{ portfolio.about }}</p>
 <p><strong>Contact Email: </strong> {{ portfolio.contact_email }} </p>
 
 
