--- a/portfolio_app/templates/portfolio_app/portfolio_detail.html
+++ b/portfolio_app/templates/portfolio_app/portfolio_detail.html
@@ -9,12 +9,18 @@
     <p><strong>Contact Email: </strong> {{ portfolio.contact_email }} </p>
 
     <h2>Project List</h2>
+    <a class="btn btn-primary" href="{% url 'create_project' portfolio.id %}" role="button">New</a>
+
+    {% if projects %}
+
     <ul>
         {% for project in projects %}
             <li>
-                <a href="{{ project.get_absolute_url }}">{{ project.title }}</a>
+                {{ project.title }}: 
+                <a class="btn btn-primary" href="{{ project.get_absolute_url }}" role="button">View</a>
             </li>
         {% endfor %}
     </ul>
+    {% endif %}
 
 {% endblock %}
