add update portfolio feature

--- a/portfolio_app/templates/portfolio_app/portfolio_detail.html
+++ b/portfolio_app/templates/portfolio_app/portfolio_detail.html
@@ -18,7 +18,7 @@
             <li>
                 {{ project.title }}: 
                 <a class="btn btn-primary" href="{{ project.get_absolute_url }}" role="button">View</a>
-                <a class="btn btn-primary" href="{% url 'update_project' portfolio.id project.id %}" role="button">Update</a>
+                <a class="btn btn-primary" href="{% url 'update_project' project.portfolio.id project.id %}" role="button">Update</a>
                 <a class="btn btn-primary" href="{% url 'delete_project' project.portfolio.id project.id  %}" role="button">Delete</a>
             </li>
         {% endfor %}
