--- a/portfolio_app/templates/portfolio_app/student_detail.html
+++ b/portfolio_app/templates/portfolio_app/student_detail.html
@@ -8,6 +8,10 @@
 <p><strong>Email:</strong> {{ student.email }}</p>
 <p><strong>Major:</strong> {{ student.major }}</p>
 <p><strong>Portfolio:<a href="{{ student.portfolio.get_absolute_url }}">{{ student.portfolio.title }} </a>
+<a class="btn btn-primary" href="{% url 'update_portfolio' student.portfolio.id %}" role="button">Update</a>
+<p>Student ID: {{ student.id }}</p>
+<p>Portfolio ID: {{ student.portfolio.id }}</p>
+
 
 
 {% endblock %}
